--- a/add-content.html
+++ b/add-content.html
@@ -2,13 +2,12 @@
 <html>
     <head>
         <title>Construction &amp; Co.</title>
-        <link rel="stylesheet" href="css/c01.css"/>
+        <link rel="stylesheet" type="text/css" href="css/c01.css"/>
     </head>
     <body>
         <h1>Construction &amp; Co.</h1>
+        <script type="text/Javascript" src="js/add-content.js"></script>
         <p>For all orders and inquiries please call
             <em>555-3344</em></p>
-            
-        <script src="js/add-content.js"></script>
     </body>
 </html>
