--- a/add-content.html
+++ b/add-content.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Construction &amp; Co.</h1>
-        <script type="text/Javascript" src="js/add-content.js"></script>
+        <script>document.write('<h3>WELCOME!</h3>')</script>
         <p>For all orders and inquiries please call
             <em>555-3344</em></p>
     </body>
